[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/StreakIndicator_WinIcon.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/StreakIndicatorBackground.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/StatsPanel/StreakPanel.gd" type="Script" id=4]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/StreakIndicatorBackground_Glow_Win.png" type="Texture" id=5]
[ext_resource path="res://MiscRelated/ControlGradientTintRelated/ControlGradientTint.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 13
font_data = ExtResource( 1 )

[node name="StreakPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 19.0
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 19.0
texture = ExtResource( 3 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 19.0
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="GlowBackground" type="TextureRect" parent="MarginContainer2"]
margin_left = 2.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 17.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="ControlGradientTint" parent="MarginContainer2" instance=ExtResource( 6 )]
margin_left = 2.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 17.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 2
custom_constants/margin_left = 3
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 3.0
margin_top = 2.0
margin_right = 35.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 2.0
margin_right = 16.0
margin_bottom = 15.0
size_flags_horizontal = 10
custom_constants/margin_top = 1

[node name="StreakLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_top = 1.0
margin_right = 14.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "12"

[node name="StreakIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 19.0
margin_top = 1.0
margin_right = 32.0
margin_bottom = 14.0
size_flags_horizontal = 10
size_flags_vertical = 6
texture = ExtResource( 2 )
